[gd_scene format=3 uid="uid://dsnr7dq55rfyk"]

[ext_resource type="Script" uid="uid://c0wxo80n2kqta" path="res://Scripts/Player/candle_player.gd" id="1_p1jqv"]
[ext_resource type="Texture2D" uid="uid://cghlih80e7w6" path="res://Assets/Player/candle.png" id="2_5vcen"]
[ext_resource type="Script" uid="uid://dpscdhtb7w28j" path="res://Scripts/Player/candle_animations.gd" id="4_5vcen"]
[ext_resource type="Texture2D" uid="uid://divv5kuurlcg" path="res://Assets/Fire/Small_Fireball_10x26.png" id="4_ohdre"]
[ext_resource type="Texture2D" uid="uid://bmi5e6nspbxt3" path="res://Assets/Darkness.png" id="5_5vcen"]
[ext_resource type="PackedScene" uid="uid://bio3abrceg83a" path="res://Scenes/Levels/loose_menu.tscn" id="5_mb1rh"]
[ext_resource type="AudioStream" uid="uid://b42330n7sgcds" path="res://Audio/Player/candle_flame_SFX.ogg" id="5_pgpgy"]
[ext_resource type="Script" uid="uid://cdekpneeufghb" path="res://Scripts/Player/fire_area.gd" id="6_fldxn"]
[ext_resource type="AudioStream" uid="uid://j7wcpo8751uk" path="res://Audio/Player/flame_off_SFX.ogg" id="6_mb1rh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p1jqv"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k754a"]
radius = 4.63822
height = 18.7755

[sub_resource type="AtlasTexture" id="AtlasTexture_k754a"]
atlas = ExtResource("4_ohdre")
region = Rect2(0, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fldxn"]
atlas = ExtResource("4_ohdre")
region = Rect2(10, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgpgy"]
atlas = ExtResource("4_ohdre")
region = Rect2(20, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb1rh"]
atlas = ExtResource("4_ohdre")
region = Rect2(30, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkhb5"]
atlas = ExtResource("4_ohdre")
region = Rect2(40, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jqsy"]
atlas = ExtResource("4_ohdre")
region = Rect2(50, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehfws"]
atlas = ExtResource("4_ohdre")
region = Rect2(60, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_trbsq"]
atlas = ExtResource("4_ohdre")
region = Rect2(70, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_14pnx"]
atlas = ExtResource("4_ohdre")
region = Rect2(80, 52, 10, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c1s0"]
atlas = ExtResource("4_ohdre")
region = Rect2(90, 52, 10, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_usdh6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k754a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fldxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgpgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb1rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkhb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jqsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehfws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trbsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14pnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c1s0")
}],
"loop": true,
"name": &"Fire",
"speed": 11.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k754a"]
bg_color = Color(0.861716, 0.0152079, 9.62615e-07, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fldxn"]
bg_color = Color(0.431203, 0.777874, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id="Animation_c5p07"]
resource_name = "Fire"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarknessTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.51, 1.51), Vector2(1.65, 1.65), Vector2(1.63, 1.63)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarknessTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_pgpgy"]
resource_name = "Goodbye_Darkness"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarknessTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.93333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.51, 1.51), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarknessTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.6392157), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ebalj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarknessTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.285, 4.285)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DarknessTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-84, 336)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DarknessTexture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_k754a"]
resource_name = "kill"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarknessTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.51, 1.51), Vector2(0.22, 0.22), Vector2(0.175, 0.175)]
}

[sub_resource type="Animation" id="Animation_fldxn"]
resource_name = "stay_killed"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DarknessTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.175, 0.175)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bcdl3"]
_data = {
&"Fire": SubResource("Animation_c5p07"),
&"Goodbye_Darkness": SubResource("Animation_pgpgy"),
&"RESET": SubResource("Animation_ebalj"),
&"kill": SubResource("Animation_k754a"),
&"stay_killed": SubResource("Animation_fldxn")
}

[node name="Candle-Player" type="CharacterBody2D" unique_id=31092358 node_paths=PackedStringArray("fire_animation") groups=["player"]]
scale = Vector2(1.96, 1.96)
collision_layer = 2
collision_mask = 57
script = ExtResource("1_p1jqv")
fire_animation = NodePath("FireArea")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1720756080]
texture_filter = 1
position = Vector2(0.2, -5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_5vcen")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=425528358]
shape = SubResource("CapsuleShape2D_p1jqv")

[node name="FireArea" type="Area2D" parent="." unique_id=201426561 node_paths=PackedStringArray("bar", "fire_animation")]
position = Vector2(0, -22)
scale = Vector2(0.55, 0.55)
collision_layer = 4
collision_mask = 40
script = ExtResource("6_fldxn")
bar = NodePath("../CanvasLayer/ProgressBar")
fire_animation = NodePath("../FireAnimation")
loose_menu = ExtResource("5_mb1rh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea" unique_id=1772313496]
position = Vector2(0, 2.89425)
shape = SubResource("CapsuleShape2D_k754a")
debug_color = Color(0.987509, 0, 0.312252, 0.42)

[node name="FlameAlive" type="AudioStreamPlayer2D" parent="FireArea" unique_id=653084471]
stream = ExtResource("5_pgpgy")
volume_db = 7.782
autoplay = true

[node name="FlameKill" type="AudioStreamPlayer2D" parent="FireArea" unique_id=479985769]
stream = ExtResource("6_mb1rh")
volume_db = 16.271

[node name="FireAnimation" type="AnimatedSprite2D" parent="." unique_id=1448469897]
texture_filter = 1
position = Vector2(0, -22)
scale = Vector2(0.55, 0.55)
sprite_frames = SubResource("SpriteFrames_usdh6")
animation = &"Fire"
autoplay = "Fire"
frame_progress = 0.795133

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=714631531]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer" unique_id=1393437567]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -242.0
offset_top = -88.0
offset_right = 242.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_k754a")
theme_override_styles/fill = SubResource("StyleBoxFlat_fldxn")
show_percentage = false

[node name="DarknessTexture" type="Sprite2D" parent="." unique_id=943423137]
z_index = 10
texture_filter = 2
position = Vector2(-84, 336)
scale = Vector2(4.285, 4.285)
texture = ExtResource("5_5vcen")
offset = Vector2(-19.3699, 82.147)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=160269180 node_paths=PackedStringArray("animated_sprite", "candle", "fire")]
libraries/ = SubResource("AnimationLibrary_bcdl3")
script = ExtResource("4_5vcen")
animated_sprite = NodePath("../FireAnimation")
candle = NodePath("..")
fire = NodePath("../FireArea")

[connection signal="finished" from="FireArea/FlameAlive" to="FireArea" method="_on_flame_alive_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
